--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Controls\LogInControl.xaml.cs">
+    <Compile Update="Views\LogInView.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
